# magneto_rl

./: .gitmodules  CMakeLists.txt  README.md  license
rl/: package.xml
rl/src/: eval.py  magneto_base.py  magneto_env.py  magneto_policy_learner.py  magneto_utils.py  train.py
rl/srv/: MagnetismModifierRequest.srv
src/: eval_dqn.py  magnetic_seeder.py  magneto_base.py  magneto_game_plugin.py  magneto_ros_plugin.py  train_dqn.py
